--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   equatable: ^2.0.5
   cached_network_image: ^3.4.1
   flutter_svg_plus: ^2.0.13+1
+  http: ^1.2.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
