--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.1.2
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
+  mocktail: ^1.0.4
 
 dev_dependencies:
   flutter_test:
